montée version springboot + cleanup dead code