@@ -1,7 +1,6 @@
 package fr.gouv.monprojetsup.suggestions.dto.explanations;
 
 
-import com.fasterxml.jackson.annotation.JsonIgnore;
 import fr.gouv.monprojetsup.data.model.stats.Middle50;
 import fr.gouv.monprojetsup.suggestions.data.model.Path;
 import lombok.AllArgsConstructor;
@@ -25,7 +24,7 @@ record ExplanationTagShort(List<String> ns) {
 
     public static ExplanationTagShort fromPathes(@Nullable Collection<Path> pathes) {
         if(pathes == null) {
-            return new ExplanationTagShort(Collections.emptyList());
+            return new ExplanationTagShort(List.of());
         } else {
             return new ExplanationTagShort(
                     pathes.stream()
@@ -35,10 +34,6 @@ record ExplanationTagShort(List<String> ns) {
                             .toList()
             );
         }
-    }
-
-    public static ExplanationTagShort fromNodes(Set<String> nodes) {
-        return new ExplanationTagShort(nodes.stream().toList());
     }
 
     public String toExplanation(String sep, Map<String,String> labels) {
@@ -81,83 +76,6 @@ public class Explanation {
     @Nullable ExplanationDebug debug;
     @Nullable ExplanationSpecialites spec;
 
-    public static @NotNull List<Explanation> merge(@Nullable List<Explanation> explanations) {
-        if(explanations == null) return Collections.emptyList();
-
-        //we use a set to avoid duplicates
-        Set<Explanation> result = new HashSet<>();
-        ExplanationDuration dur = null;
-
-        ExplanationSpecialites spec = null;
-        boolean seenSpec = false;
-        ExplanationTypeBac tbac = null;
-        boolean seenTbac = false;
-        ExplanationNotes moygen = null;
-        boolean seenMoyGen = false;
-
-        ExplanationApprentissage app = null;
-
-        Set<Path> pathes = new HashSet<>();
-        Set<String> nodes = new HashSet<>();
-        for (Explanation e : explanations) {
-            if(e == null) {
-                continue;
-            }
-            if(e.app != null) {
-                app = e.app;
-            }
-            if(e.dur != null) {
-                dur = e.dur;
-            }
-
-            if (e.geo != null || e.simi != null || e.debug != null) {
-                result.add(e);
-            }
-            if (e.spec != null) {
-                if(!seenSpec) spec = e.spec;
-                else spec = null;
-                seenSpec = true;
-            }
-            if (e.tbac != null) {
-                if(!seenTbac) tbac = e.tbac;
-                else tbac = null;
-                seenTbac = true;
-            }
-            if (e.moygen != null) {
-                if(!seenMoyGen) moygen = e.moygen;
-                else moygen = null;
-                seenMoyGen = true;
-            }
-            if(e.tag != null) {
-                pathes.addAll(e.tag.pathes());
-            }
-            if(e.tags != null) {
-                nodes.addAll(e.tags.ns());
-            }
-        }
-
-        Explanation e = new Explanation();
-        e.app = app;
-        e.dur = dur;
-        e.spec = spec;
-        e.tbac = tbac;
-        e.moygen = moygen;
-        if(e.isEmpty()) {
-            result.add(e);
-        }
-        if(!pathes.isEmpty()) {
-            result.add(getTagExplanation(pathes));
-        }
-        if(!nodes.isEmpty()) {
-            result.add(getTagExplanationShort(nodes));
-        }
-        return result.stream().toList();
-    }
-
-    private boolean isEmpty() {
-        return geo == null && app == null && tag == null && tags == null && dur == null && simi == null && tbac == null && moygen == null && debug == null && spec == null;
-    }
-
     public static @NotNull Explanation getGeoExplanation(@Nullable List<ExplanationGeo> result) {
         Explanation e = new Explanation();
         e.geo = result;
@@ -170,27 +88,9 @@ public class Explanation {
         return e;
     }
 
-    public static @NotNull Explanation getTagExplanation(
-            List<Path> pathes)
-    {
-        Explanation e = new Explanation();
-        e.tag = new ExplanationTag(pathes);
-        return e;
-    }
-
-    public static @NotNull Explanation getTagExplanation(Set<Path> pathes) {
-        return getTagExplanation(pathes.stream().toList());
-    }
-
     public static @NotNull Explanation getTagExplanationShort(Collection<Path> pathes) {
         Explanation e = new Explanation();
         e.tags = ExplanationTagShort.fromPathes(pathes);
-        return e;
-    }
-
-    private static @NotNull Explanation getTagExplanationShort(Set<String> nodes) {
-        Explanation e = new Explanation();
-        e.tags = ExplanationTagShort.fromNodes(nodes);
         return e;
     }
 
@@ -259,7 +159,6 @@ public class Explanation {
         StringBuilder sb = new StringBuilder();
         if(geo != null) sb.append("geo=").append(geo).append("\n");
         if(app != null) sb.append("app=").append(app).append("\n");
-        //if(tag != null) sb.append("tag=").append(tag.toExplanation(labels)).append("\n");
         if(tags != null) sb.append("tags=").append(tags.toExplanation("\n\t", labels)).append("\n");
         if(dur != null) sb.append("dur=").append(dur).append("\n");
         if(simi != null) sb.append("simi=").append(simi).append("\n");
@@ -271,14 +170,6 @@ public class Explanation {
     }
 
 
-    @JsonIgnore
-    public boolean isInheritableFromSingleFormationToItsGroup() {
-        return hasNoStats();
-    }
-
-    private boolean hasNoStats() {
-        return moygen == null && tbac == null && spec == null;
-    }
 }
 
 
